Implements base templating engine

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "mustache/mustache": "^2.12",
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+        "zordius/lightncandy": "dev-master",
+        "symfony/yaml": "^4.1",
+        "jeremeamia/SuperClosure": "^2.4"
     }
 }
