--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "templating-engine",
   "version": "1.0.0",
-  "description": "A templating engine using Mustache.php",
+  "description": "A PHP templating engine for powering a dynamic website",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
