--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "require": {
-        "erusev/parsedown": "^1.7",
+        "erusev/parsedown": "1.8.0-beta-5",
         "zordius/lightncandy": "dev-master",
         "symfony/yaml": "^4.1",
         "jeremeamia/SuperClosure": "^2.4",
-        "mustache/mustache": "^2.12"
+        "mustache/mustache": "^2.12",
+        "erusev/parsedown-extra": "0.8.0-beta-1"
     }
 }
