--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "require": {
-        "erusev/parsedown": "1.8.0-beta-5",
-        "zordius/lightncandy": "dev-master",
-        "symfony/yaml": "^4.1",
-        "jeremeamia/SuperClosure": "^2.4",
-        "mustache/mustache": "^2.12",
-        "erusev/parsedown-extra": "0.8.0-beta-1"
-    }
+  "require": {
+    "erusev/parsedown": "1.8.0-beta-5",
+    "zordius/lightncandy": "dev-master",
+    "symfony/yaml": "^4.1",
+    "jeremeamia/SuperClosure": "^2.4",
+    "mustache/mustache": "^2.12",
+    "erusev/parsedown-extra": "0.8.0-beta-1",
+    "lodash-php/lodash-php": "^0.0.6"
+  }
 }
