--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "mustache/mustache": "^2.12",
     "erusev/parsedown-extra": "0.8.0-beta-1",
     "lodash-php/lodash-php": "^0.0.6",
-    "fightbulc/moment": "^1.29"
+    "fightbulc/moment": "^1.29",
+    "vlucas/phpdotenv": "^3.3"
   }
 }
