--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
     "mustache/mustache": "^2.12",
     "erusev/parsedown-extra": "0.8.0-beta-1",
     "fightbulc/moment": "^1.29",
-    "vlucas/phpdotenv": "^3.3",
-    "me-io/php-lodash": "^2.0"
+    "vlucas/phpdotenv": "^3.3"
   }
 }
