Updates package version to `dev`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "templating-engine",
-  "version": "1.0.0",
+  "version": "1.0.0-dev",
   "description": "A PHP templating engine for powering a dynamic website",
   "main": "index.js",
   "scripts": {},
