--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Lauren Hamel",
   "license": "MIT",
   "devDependencies": {
+    "cli-progress": "^2.1.1",
     "glob": "^7.1.3",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.1.0",
