--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "erusev/parsedown-extra": "0.8.0-beta-1",
     "fightbulc/moment": "^1.29",
     "vlucas/phpdotenv": "^3.3",
-    "kint-php/kint": "^3.2"
+    "kint-php/kint": "^3.2",
+    "bvanhoekelen/performance": "^2.5"
   }
 }
