Updates gitignore to keep data folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
+# General
 .DS_Store
 node_modules/
 vendor/
 public/
 .env
-src/data
+
+# Environment Data
+src/data/__environment__/_global/**/*
+src/data/__environment__/_meta/**/*
+src/data/__environment__/_shared/**/*
+src/data/__environment__/*.*
+
+# Sibling Data
+src/data/__environment__/__sibling*__/**/*
+!src/data/__environment__/__sibling*__/_global/
+!src/data/__environment__/__sibling*__/_meta/
+!src/data/__environment__/__sibling*__/_shared/
+
+# Site Data
+src/data/__environment__/__site__/**/*
+!src/data/__environment__/__site__/_global/
+!src/data/__environment__/__site__/_meta/
+!src/data/__environment__/__site__/_shared/
+
+# Gitkeep
+!**/.gitkeep
