--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
   "license": "MIT",
   "devDependencies": {
     "cli-progress": "^2.1.1",
+    "cypress": "^3.2.0",
+    "dotenv": "^8.0.0",
+    "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-symlink": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-cypress": "^1.1.2",
     "grunt-phplint": "^0.1.0",
     "load-grunt-tasks": "^4.0.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "path": "^0.12.7"
   },
   "dependencies": {
     "chalk": "^2.4.2",
-    "fs-extra": "^7.0.1",
     "inquirer": "^6.3.1",
-    "path": "^0.12.7",
     "webdav": "^2.6.0"
   }
 }
