--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "fightbulc/moment": "^1.29",
     "vlucas/phpdotenv": "^3.3",
     "kint-php/kint": "^3.2",
-    "bvanhoekelen/performance": "^2.5"
+    "bvanhoekelen/performance": "^2.5",
+    "sabre/uri": "^2"
   }
 }
