--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,8 @@
 {
   "repositories": [
     {
-      "type": "package",
-      "package": {
-        "name": "laurenhamel/lightncandy",
-        "version": "dev-master",
-        "type": "git",
-        "source": {
-          "url": "https://github.com/laurenhamel/lightncandy.git",
-          "type": "git",
-          "reference": "master"
-        }
-      }
+      "type": "vcs",
+      "url": "git@github.com:laurenhamel/lightncandy"
     }
   ],
   "require": {
@@ -25,6 +16,6 @@
     "kint-php/kint": "^3.2",
     "bvanhoekelen/performance": "^2.5",
     "sabre/uri": "^2",
-    "laurenhamel/lightncandy": "dev-master"
+    "laurenhamel/lightncandy": "^1.2"
   }
 }
