--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-rename": "^0.2.0",
     "grunt-contrib-symlink": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-cypress": "^1.1.2",
